--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: y mandatory;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -138,7 +139,15 @@ h1 ,h2,h3{
     color: var(--blanco);
 }
 
+
 /*servicios*/
+/*scroll-sanp*/
+.servicios, 
+.navegacion-principal,
+.formulario{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;   
+}
 @media (min-width: 768px) {
     .servicios{
         display: grid;
@@ -188,21 +197,40 @@ h1 ,h2,h3{
     margin-bottom: 2rem;
     color: var(--primario);
 }
-.contenedor-campos{
-
+@media (min-width: 768px) {
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: 50% 50%; /**fijar numero de columnas**/
+        grid-template-rows: auto auto 25rem;
+        column-gap: 1rem;
+    }
+    /*** En nth el arreglo comienza desde 1 ***/
+    .campo:nth-child(3),
+    .campo:nth-child(4){     
+        grid-column: 1 / 3;/** posicionar un elemento**/
+}
 }
 .campo{
     margin-bottom: 2rem;
 }
+
+
 .campo label{
     color:var(--blanco);
     font-weight: 700;
     margin-bottom: .5rem;
     display: block;
 }
+.campo textarea{
+    height: 20rem;
+}
 .input-text{
     width: 100%;
     border: none;
     padding: 1.5rem;
     border-radius: 0.5rem;
+}
+
+.footer{
+    text-align: center;
 }
